# Embedded_Systems_Tracker

./: .gitignore  .~lock.COMPONENTS_DATA.ods#  COMPONENTS_DATA.ods  COMPONENTS_DATA_ENRICHED.xlsx  Context.md  README.md  embedded-tracker.spec  main.py  pyproject.toml
audit_data/: 00_AUDIT_SUMMARY.txt  01_phases.csv  02_weeks.csv  03_days.csv  04_tasks.csv  05_resources.csv  06_projects.csv  07_certifications.csv  08_applications.csv  09_hardware.csv  10_metrics.csv
data/: hardware_bom.json  roadmap_seed.json
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CLOUD_CREDITS_USAGE.md  DEVELOPMENT.md  STUDY_GUIDE.md
embedded_tracker/: __init__.py  cli.py  db.py  export.py  logging_config.py  models.py  seed.py  services.py  utils.py  work_calendar.py
embedded_tracker/gui/: base.py  (+4 more)
export/: all.csv  applications.csv  certifications.csv  days.csv  hardware.csv  phases.csv  projects.csv  resources.csv  tasks.csv  weeks.csv
scripts/: add_audit_recommendations.py  audit_integrity.py  audit_urls.py  build_linux_deb.sh  build_windows_exe.bat  build_windows_exe.ps1  complete_audit_fixes.py  complete_realignment.py  comprehensive_data_audit.py  export_for_audit.py  fix_low_issues.py  fix_skill_gaps.py  fix_task_alignment.py  fix_task_counts.py  fix_urls.py  fix_urls_and_add_books.py  generate_full_seed.py  implement_audit_fixes.py  implement_deep_audit.py  implement_stanford_v4.py  implement_v5_comprehensive.py  implement_v6_final.py  merge_inventory.py  seed_roadmap.py  ultra_deep_audit.py  verify_seed.py  verify_urls.py
tests/: conftest.py  test_models.py  test_services.py
(+18 files in other folders)
